--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,19 @@
 }
 th{
 	color:#2196f3;
+	font-size: 18px;
 }
-#insertNew{
+#frmProducts{
 	border: 1px solid #b0e8b0;
 	border-radius: 5px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(140, 233, 102, 0.68);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(140, 233, 102, 0.68);
     padding: 20px;
+}
+#frmProducts input[type=number]{
+	max-width:100px;
+}
+#frmProducts table tr th{
+	color:#5cb85c;
+	
 }
